Fixed game display on smaller screens

--- a/docs/game.css
+++ b/docs/game.css
@@ -147,7 +147,7 @@ footer nav ul li a:hover, footer nav ul li a.active {
     }
 
     footer nav ul li {
-        margin: 5px 0;
+        margin: 0px 0;
     }
 
    
